# DockerWatch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yml
agent/: pyproject.toml
agent/src/dockerwatch_agent/: README.md  agent.py  cli.py  collector.py  sender.py
backend/: Dockerfile  docker-compose.azure.yml  docker-compose.prod.yml  nginx.conf  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: deps.py  schemas.py
backend/src/app/api/routes/: alerts.py  auth.py  billing.py  cost_routes.py  ingest.py  metrics.py  waitlist.py  workspaces.py
backend/src/app/core/: config.py  security.py
backend/src/app/db/: models.py  session.py
backend/src/app/db/migrations/: env.py
backend/src/app/db/migrations/versions/: 0001_initial_schema.py  0002_add_alert_events.py  0003_razorpay_fields.py  0004_add_razorpay_workspace_fields.py  0006_waitlist_table.py  e3ba46c1e026_create_alert_events_table.py
backend/src/app/services/: alert_worker.py  cost.py  razorpay_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: forms.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/alerts/: page.tsx
frontend/app/dashboard/billing/: page.tsx
frontend/app/dashboard/containers/[id]/: page.tsx
frontend/app/dashboard/cost/: page.tsx
frontend/app/dashboard/getting-started/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/lib/: api.ts
