[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerwatch-agent"
version = "0.1.0"
description = "DockerWatch agent — ships container metrics to DockerWatch"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "click>=8.1.0",
]

[project.scripts]
dockerwatch-agent = "dockerwatch_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]