[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerwatch-backend"
version = "0.1.0"
description = "DockerWatch backend service"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "python-jose[cryptography]",
    "apscheduler",
    "resend",
    "stripe",
    "psycopg2-binary",
    "email-validator",
    "razorpay>=1.4.2",
    "httpx>=0.27.0",

    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",

    "pydantic-settings"
]

[tool.uvicorn]
reload = true